--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ board_build.filesystem = littlefs
 lib_deps = 
 	me-no-dev/ESPAsyncTCP@^1.2.2
 	me-no-dev/ESP Async WebServer@^1.2.3
+upload_speed = 921600
