add ultra sonic

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,5 @@ board_build.filesystem = littlefs
 lib_deps = 
 	me-no-dev/ESPAsyncTCP@^1.2.2
 	me-no-dev/ESP Async WebServer@^1.2.3
+	jihoonkimtech/UltraSonic_Lib@^1.0.1
 upload_speed = 921600
